--- a/.github/workflows/python_ci.yaml
+++ b/.github/workflows/python_ci.yaml
@@ -33,5 +33,4 @@ jobs:
           pytest
       - name: Run Pub/Sub integration test
         run: |
-          ls
-          cd flow-io/ray_io && ./pubsub_integration.sh
+          cd flow_io/ray_io && ./pubsub_integration.sh
