--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ readme = "README.md"
 requires-python = ">=3.7"
 dependencies = [
     "apache-beam",
+    "duckdb",
     "google-cloud-bigquery",
     "google-cloud-pubsub",
     "ray",
