--- a/.github/workflows/python_ci.yaml
+++ b/.github/workflows/python_ci.yaml
@@ -3,7 +3,26 @@ name: Python CI
 on: [push]
 
 jobs:
-  test_and_lint:
+  flake8:
+
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: Install dependencies
+        run: |
+          pip install flake8
+      - name: Run flake8
+        uses: suo/flake8-github-action@releases/v1
+        with:
+          checkName: 'test_and_lint'  # NOTE: this needs to be the same as the job name
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  test:
 
     runs-on: ubuntu-latest
     strategy:
@@ -20,14 +39,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .[dev]
-      - name: Run flake8
-        # Only run flake8 on py 3.10 to avoid multiple PR comments.
-        uses: suo/flake8-github-action@releases/v1
-        if: ${{ matrix.python-version == '3.10' }}
-        with:
-          checkName: 'test_and_lint (3.10)'  # NOTE: this needs to be the same as the job name
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Test with pytest
         run: |
           pytest
