--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ readme = "README.md"
 requires-python = ">=3.7"
 dependencies = [
     "apache-beam",
-    "duckdb",
+    "duckdb==0.6.0",
     "google-cloud-bigquery",
     "google-cloud-pubsub",
     # TODO: https://github.com/grpc/grpc/issues/31885
