--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "apache-beam",
     "duckdb==0.6.0",
     "google-cloud-bigquery",
+    "google-cloud-bigquery-storage",
     "google-cloud-pubsub",
     # TODO: https://github.com/grpc/grpc/issues/31885
     "grpcio==1.48.2",
@@ -24,6 +25,7 @@ dependencies = [
     "opentelemetry-exporter-otlp",
     "opentelemetry-exporter-jaeger",
     "pandas",
+    "pyarrow",
     "ray",
     "redis",
 ]
