--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=64.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "flow-io"
+name = "launchflow"
 version = "0.0.1"
 authors = [
     { name = "Caleb Van Dyke", email = "caleb@launchflow.com" },
@@ -32,6 +32,7 @@ classifiers = [
     "Development Status :: 2 - Pre-Alpha",
     "Intended Audience :: Developers",
     "Topic :: Software Development",
+    "License :: OSI Approved :: Apache Software License",
 ]
 
 [project.optional-dependencies]
