--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=64.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "launchflow"
+name = "flowstate"
 version = "0.0.1"
 authors = [
     { name = "Caleb Van Dyke", email = "caleb@launchflow.com" },
