--- a/.github/workflows/python_ci.yaml
+++ b/.github/workflows/python_ci.yaml
@@ -22,7 +22,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  test:
+  pytest:
 
     runs-on: ubuntu-latest
     strategy:
@@ -51,5 +51,10 @@ jobs:
 
       - name: Run Pub/Sub integration test
         run: |
-          cd flow_io/ray_io/integration_test
+          cd integration_test/pubsub_to_pubsub
+          ./pubsub_integration.sh
+
+      - name: Run Pub/Sub multi-output integration test
+        run: |
+          cd integration_test/pubsub_to_pubsub_multi_output
           ./pubsub_integration.sh
