--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: google-github-actions/release-please-action@v3
+        id: release
         with:
           release-type: python
           package-name: release-please-action
@@ -22,6 +23,7 @@ jobs:
           python-version: "3.10"
 
       - name: Build Python distribution
+        if: ${{ steps.release.outputs.releases_created }}
         run: |
           pip install build
           python -m build
