--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "google-cloud-bigquery",
     "google-cloud-bigquery-storage",
     "google-cloud-pubsub",
+    "google-cloud-storage",
     # TODO: https://github.com/grpc/grpc/issues/31885
     "grpcio==1.48.2",
     "opentelemetry-api",
