add storage api

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ dependencies = [
     "opentelemetry-exporter-otlp",
     "opentelemetry-exporter-jaeger",
     "pandas",
+    "sqlacodegen",
+    "sqlalchemy",
+    "psycopg2-binary",
     "pyarrow",
     "ray",
     "redis",
