--- a/.github/workflows/gcp_integration.yaml
+++ b/.github/workflows/gcp_integration.yaml
@@ -32,8 +32,8 @@ jobs:
       # TODO: switch the condition below, just need to validate that is passes and failes correctly.
       - name: Run Pub/Sub Walkthrough
         run: |
-          bq_table=uuidgen
-          timeout 240 python -m buildflow.samples.pubsub_walkthrough --gcp_project=${{ secrets.GCP_PROJECT }} --bigquery_table=$uuidgen
+          bq_table=$(uuidgen)
+          timeout 240 python -m buildflow.samples.pubsub_walkthrough --gcp_project=${{ secrets.GCP_PROJECT }} --bigquery_table=$bq_table
           num_rows=`bq query --nouse_legacy_sql "SELECT COUNT(*) as count FROM ${{ secrets.GCP_PROJECT }}.buildflow_walkthrough.${bq_table}" | grep -Po '.* \K\d+\.*\d*'`
           if [ $num -gt 0 ]; then exit 1; else exit 0; fi
 
@@ -98,8 +98,8 @@ jobs:
       # TODO: switch the condition below, just need to validate that is passes and failes correctly.
       - name: Run CSV -> BigQuery Walkthrough
         run: |
-          bq_table=uuidgen
-          python -m buildflow.samples.csv_bigquery_walkthrough --gcp_project=${{ secrets.GCP_PROJECT }} --bigquery_table=$uuidgen --bucket_name=${{ secrets.GCP_BUCKET }} &
+          bq_table=$(uuidgen)
+          python -m buildflow.samples.csv_bigquery_walkthrough --gcp_project=${{ secrets.GCP_PROJECT }} --bigquery_table=$bq_table --bucket_name=${{ secrets.GCP_BUCKET }} &
           sleep 30
           gsutil cp buildflow/samples/wiki_page_views.csv gs://${{ secrets.GCP_BUCKET }}
           sleep 30
