--- a/.github/workflows/gcp_integration.yaml
+++ b/.github/workflows/gcp_integration.yaml
@@ -29,11 +29,11 @@ jobs:
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v1'
 
-      # TODO: switch the condition below, just need to validate that is passes and failes correctly.
       - name: Run Pub/Sub Walkthrough
         run: |
           bq_table=$(uuidgen)
           timeout -s SIGINT --preserve-status 120 python -m buildflow.samples.pubsub_walkthrough --gcp_project=${{ secrets.GCP_PROJECT }} --bigquery_table=$bq_table
+          bq query --nouse_legacy_sql "SELECT COUNT(*) as count FROM ${{ secrets.GCP_PROJECT }}.buildflow_walkthrough.${bq_table}"
           num_rows=`bq query --nouse_legacy_sql "SELECT COUNT(*) as count FROM ${{ secrets.GCP_PROJECT }}.buildflow_walkthrough.${bq_table}" | grep -Po '.* \K\d+\.*\d*'`
           echo $num_rows
           if [ $num -gt 0 ]; then exit 0; else exit 1; fi
@@ -63,11 +63,11 @@ jobs:
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v1'
 
-      # TODO: switch the condition below, just need to validate that is passes and failes correctly.
       - name: Run BigQuery Sample
         run: |
           output_table=${{ secrets.GCP_PROJECT }}.testing_output.$(uuidgen)
           python -m buildflow.samples.bigquery_sample --gcs_bucket=${{ secrets.GCP_BQ_OUTPUT_BUCKET }} --input_table=${{ secrets.GCP_PROJECT }}.testing_input.bq_to_bq_input --output_table=$output_table
+          bq query --nouse_legacy_sql "SELECT COUNT(*) as count FROM ${output_table}" 
           num_rows=`bq query --nouse_legacy_sql "SELECT COUNT(*) as count FROM ${output_table}" | grep -Po '.* \K\d+\.*\d*'`
           echo $num_rows
           if [ $num -gt 0 ]; then exit 0; else exit 1; fi
@@ -97,7 +97,6 @@ jobs:
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v1'
 
-      # TODO: switch the condition below, just need to validate that is passes and failes correctly.
       - name: Run CSV -> BigQuery Walkthrough
         run: |
           bq_table=$(uuidgen)
@@ -105,6 +104,6 @@ jobs:
           sleep 30
           gsutil cp buildflow/samples/wiki_page_views.csv gs://${{ secrets.GCP_BUCKET }}
           sleep 60
+          bq query --nouse_legacy_sql "SELECT COUNT(*) as count FROM ${{ secrets.GCP_PROJECT }}.buildflow_walkthrough.${bq_table}
           num_rows=`bq query --nouse_legacy_sql "SELECT COUNT(*) as count FROM ${{ secrets.GCP_PROJECT }}.buildflow_walkthrough.${bq_table}" | grep -Po '.* \K\d+\.*\d*'`
-          echo $num_rows
           if [ $num -gt 0 ]; then exit 0; else exit 1; fi
