another attempt at fixing

--- a/.github/workflows/gcp_integration.yaml
+++ b/.github/workflows/gcp_integration.yaml
@@ -33,6 +33,7 @@ jobs:
         run: |
           bq_table=$(uuidgen)
           timeout -s SIGINT --preserve-status 120 python -m buildflow.samples.pubsub_walkthrough --gcp_project=${{ secrets.GCP_PROJECT }} --bigquery_table=$bq_table
+          query="SELECT COUNT(*) as count FROM \`buildflow-integration-tests.buildflow_walkthrough.${bq_table}\`"
           num_rows=$(bq query --location=US --nouse_legacy_sql $query | grep -Po '.* \K\d+\.*\d*')
           echo $num_rows
           if [ $num -gt 0 ]; then exit 0; else exit 1; fi
@@ -68,6 +69,8 @@ jobs:
           output_table=${{ secrets.GCP_PROJECT }}.testing_output.$(uuidgen)
           python -m buildflow.samples.bigquery_sample --gcs_bucket=${{ secrets.GCP_BQ_OUTPUT_BUCKET }} --input_table=${{ secrets.GCP_PROJECT }}.testing_input.bq_to_bq_input --output_table=$output_table
           query="SELECT COUNT(*) as count FROM \`${output_table}\`"
+          echo $query
+          bq query --nouse_legacy_sql $query
           num_rows=$(bq query --nouse_legacy_sql $query | grep -Po '.* \K\d+\.*\d*')
           echo $num_rows
           if [ $num -gt 0 ]; then exit 0; else exit 1; fi
@@ -103,7 +106,7 @@ jobs:
           python -m buildflow.samples.csv_bigquery_walkthrough --gcp_project=${{ secrets.GCP_PROJECT }} --bigquery_table=$bq_table --bucket_name=${{ secrets.GCP_BUCKET }} &
           sleep 30
           gsutil cp buildflow/samples/wiki_page_views.csv gs://${{ secrets.GCP_BUCKET }}
-          sleep 120
+          sleep 60
           query="SELECT COUNT(*) as count FROM \`${{ secrets.GCP_PROJECT }}.buildflow_walkthrough.${bq_table}\`"
           echo $query
           bq query --nouse_legacy_sql $query
