--- a/.github/workflows/gcp_integration.yaml
+++ b/.github/workflows/gcp_integration.yaml
@@ -35,8 +35,7 @@ jobs:
           timeout -s SIGINT --preserve-status 120 python -m buildflow.samples.pubsub_walkthrough --gcp_project=${{ secrets.GCP_PROJECT }} --bigquery_table=$bq_table
           query="SELECT COUNT(*) as count FROM \`buildflow-integration-tests.buildflow_walkthrough.${bq_table}\`"
           num_rows=$(bq query --location=US --nouse_legacy_sql $query | grep -Po '.* \K\d+\.*\d*')
-          echo $num_rows
-          if [ $num > 0 ]; then exit 0; else exit 1; fi
+          if [[ $num > 0 ]]; then exit 0; else exit 1; fi
 
   bigquery_integration_test:
     runs-on: ubuntu-latest
@@ -73,7 +72,7 @@ jobs:
           bq query --nouse_legacy_sql $query
           num_rows=$(bq query --nouse_legacy_sql $query | grep -Po '.* \K\d+\.*\d*')
           echo $num_rows
-          if [ $num -gt 0 ]; then exit 0; else exit 1; fi
+          if [[ $num > 0 ]]; then exit 0; else exit 1; fi
 
   gcs_integration_test:
     runs-on: ubuntu-latest
@@ -111,4 +110,4 @@ jobs:
           echo $query
           bq query --nouse_legacy_sql $query
           num_rows=$(bq query --nouse_legacy_sql $query | grep -Po '.* \K\d+\.*\d*')
-          if [ $num > 0 ]; then exit 0; else exit 1; fi
+          if [[ $num > 0 ]]; then exit 0; else exit 1; fi
