--- a/.github/workflows/gcp_integration.yaml
+++ b/.github/workflows/gcp_integration.yaml
@@ -7,8 +7,8 @@ jobs:
   pub_sub_integration_test:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-      id-token: 'write'
+      contents: write
+      id-token: write
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python 3.10
@@ -40,8 +40,8 @@ jobs:
   bigquery_integration_test:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-      id-token: 'write'
+      contents: write
+      id-token: write
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python 3.10
@@ -76,8 +76,8 @@ jobs:
   gcs_integration_test:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-      id-token: 'write'
+      contents: write
+      id-token: write
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python 3.10
