--- a/.github/workflows/gcp_integration.yaml
+++ b/.github/workflows/gcp_integration.yaml
@@ -56,10 +56,9 @@ jobs:
       - name: Setup GCP Auth
         uses: 'google-github-actions/auth@v1'
         with:
-          workload_identity_provider: ${{ secrets.WORKFLOW_IDENTITY_PROVIDER }}
-          service_account: ${{ secrets.GCP_SERVICE_ACCOUNT }}
-          export_environment_variables: true
-          create_credentials_file: true
+          # NOTE: We use a key file here because pyarrow doesn't support
+          # authenticating with workflow identity federation.
+          credentials_json: ${{ secrets.GCP_SA_JSON_KEY }}
 
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v1'
