--- a/.github/workflows/gcp_integration.yaml
+++ b/.github/workflows/gcp_integration.yaml
@@ -3,6 +3,9 @@ name: GCP Integration Tests
 on:
   workflow_dispatch
 
+env:
+  BUILDFLOW_USAGE_STATS_DISABLE: 1
+
 jobs:
   pub_sub_integration_test:
     runs-on: ubuntu-latest
@@ -32,7 +35,7 @@ jobs:
       - name: Run Pub/Sub Walkthrough
         run: |
           bq_table=$(uuidgen)
-          timeout -s SIGINT --preserve-status 120 python -m buildflow.samples.pubsub_walkthrough --disable_usage_stats --gcp_project=${{ secrets.GCP_PROJECT }} --bigquery_table=$bq_table
+          timeout -s SIGINT --preserve-status 120 python -m buildflow.samples.pubsub_walkthrough --gcp_project=${{ secrets.GCP_PROJECT }} --bigquery_table=$bq_table
           query="SELECT COUNT(*) as count FROM \`buildflow-integration-tests.buildflow_walkthrough.${bq_table}\`"
           num_rows=$(bq query --location=US --nouse_legacy_sql $query | grep -Po '.* \K\d+\.*\d*')
           if [[ $num_rows > 0 ]]; then exit 0; else exit 1; fi
@@ -66,7 +69,7 @@ jobs:
       - name: Run BigQuery Sample
         run: |
           output_table=${{ secrets.GCP_PROJECT }}.testing_output.$(uuidgen)
-          python -m buildflow.samples.bigquery_sample --disable_usage_stats --gcs_bucket=${{ secrets.GCP_BQ_OUTPUT_BUCKET }} --input_table=${{ secrets.GCP_PROJECT }}.testing_input.bq_to_bq_input --output_table=$output_table
+          python -m buildflow.samples.bigquery_sample --gcs_bucket=${{ secrets.GCP_BQ_OUTPUT_BUCKET }} --input_table=${{ secrets.GCP_PROJECT }}.testing_input.bq_to_bq_input --output_table=$output_table
           query="SELECT COUNT(*) as count FROM \`${output_table}\`"
           echo $query
           bq query --nouse_legacy_sql $query
@@ -101,7 +104,7 @@ jobs:
       - name: Run CSV -> BigQuery Walkthrough
         run: |
           bq_table=$(uuidgen)
-          python -m buildflow.samples.csv_bigquery_walkthrough --disable_usage_stats --gcp_project=${{ secrets.GCP_PROJECT }} --table_name=$bq_table --bucket_name=${{ secrets.GCP_BUCKET }} &
+          python -m buildflow.samples.csv_bigquery_walkthrough --gcp_project=${{ secrets.GCP_PROJECT }} --table_name=$bq_table --bucket_name=${{ secrets.GCP_BUCKET }} &
           sleep 30
           gsutil cp buildflow/samples/wiki_page_views.csv gs://${{ secrets.GCP_BUCKET }}
           sleep 60
