--- a/.github/workflows/python_ci.yaml
+++ b/.github/workflows/python_ci.yaml
@@ -1,6 +1,10 @@
 name: Python CI
 
-on: [push]
+on:
+  push:
+    branches: ['main']
+  pull_request:
+    branches: ['main']
 
 env:
   BUILDFLOW_USAGE_STATS_DISABLE: 1
