--- a/.github/workflows/python_ci.yaml
+++ b/.github/workflows/python_ci.yaml
@@ -59,6 +59,10 @@ jobs:
         with:
           install_components: 'beta,pubsub-emulator'
 
+      - name: 'Setup gcloud config'
+        run: |
+          gcloud config set auth/disable_credentials true
+
       - name: Run Pub/Sub integration test
         run: |
           cd integration_tests/pubsub_to_pubsub
