--- a/.github/workflows/python_ci.yaml
+++ b/.github/workflows/python_ci.yaml
@@ -50,9 +50,9 @@ jobs:
           sudo apt-get install redis-server
           python -m pip install --upgrade pip
           pip install .[dev]
-      # - name: Test with pytest
-      #   run: |
-      #     pytest --timeout=60
+      - name: Test with pytest
+        run: |
+          pytest --timeout=60
 
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v1'
