--- a/.github/workflows/python_ci.yaml
+++ b/.github/workflows/python_ci.yaml
@@ -10,7 +10,7 @@ env:
   BUILDFLOW_USAGE_STATS_DISABLE: 1
 
 jobs:
-  flake8:
+  code-health:
 
     runs-on: ubuntu-latest
     steps:
@@ -21,13 +21,23 @@ jobs:
           python-version: '3.10'
       - name: Install dependencies
         run: |
-          pip install flake8
-      - name: Run flake8
-        uses: suo/flake8-github-action@releases/v1
+          pip install black ruff
+      - name: Run black checks
+        uses: psf/black@stable
         with:
+          options: "--check --verbose"
+          src: "buildflow"
+          version: "~= 23.0"
           checkName: 'test_and_lint'  # NOTE: this needs to be the same as the job name
+      - name: Run ruff checks
+        uses: chartboost/ruff-action@v1
+        with:
+          src: "buildflow"
+          version: 0.0.265
+          checkName: 'test_and_lint'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
   test:
     permissions:
