--- a/.github/workflows/gcp_integration.yaml
+++ b/.github/workflows/gcp_integration.yaml
@@ -116,7 +116,7 @@ jobs:
           export GCP_PROJECT=${{ secrets.GCP_PROJECT }}
           export BUCKET_NAME=${{ secrets.GCP_BUCKET }}
           export TABLE_NAME=$bq_table
-          buildflow run  buildflow.samples.csv_bigquery_walkthrough:app
+          buildflow run buildflow.samples.csv_bigquery_walkthrough:app &
           sleep 30
           gsutil cp buildflow/samples/wiki_page_views.csv gs://${{ secrets.GCP_BUCKET }}
           sleep 60
