--- a/.github/workflows/python_ci.yaml
+++ b/.github/workflows/python_ci.yaml
@@ -62,7 +62,10 @@ jobs:
           pip install .[dev]
       - name: Test with pytest
         run: |
-          pytest --timeout=60
+          pytest --timeout=60 --cov
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
 
   pubsub_integration_tests:
     runs-on: ubuntu-latest
