--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "ray[default]",
     "typer",
     "redis",
+    "xia-easy-proto",
 ]
 classifiers = [
     "Development Status :: 2 - Pre-Alpha",
