--- a/.github/workflows/gcp_integration.yaml
+++ b/.github/workflows/gcp_integration.yaml
@@ -43,4 +43,4 @@ jobs:
           pulumi login --local
           export GCP_PROJECT=${{ secrets.GCP_PROJECT }}
           cd integration_tests/pubsub_to_pubsub
-          ./pubsub_integration.sh
+          ./test.sh
