add autoscaler test back and mark it as skipped

--- a/.github/workflows/python_ci.yaml
+++ b/.github/workflows/python_ci.yaml
@@ -60,7 +60,7 @@ jobs:
           pip install .[dev]
       - name: Test with pytest
         run: |
-          pytest --ignore=_refactor --timeout=60 --cov
+          pytest --timeout=60 --cov
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
